@@ -1,7 +1,8 @@
-* Improve Lua scripts
+* Improve Lua scripts: various bug fixes, support PING
 * Clients are disconnected with the DI flag of QUI
 * Update to Lua 5.1.4
 * Update to boost 1.40
+* Better support of Python extensions
 
 -- 2.4 2008-10-02 --
 * Improve Lua scripts
